# libde265

./: CMakeLists.txt
libde265/: CMakeLists.txt
libde265/arm/: CMakeLists.txt
